Viva alignment: docs, auth, validation